# courts-infoservice

./: .flake8  .gitignore  README.md  TODO.md  _build.sh  _env_python_setup.sh  _env_virtual_setup.sh
court_cases_scraper/: .coveragerc  .env_example  Pipfile  SCRAPER.md  TODO.md  setup.cfg  setup.py
court_cases_scraper/src/courts/: exceptions.py
court_cases_scraper/src/courts/common/: cookiesArbitrary.py
court_cases_scraper/src/courts/config/: db_init_config.py  logger_config.py  scraper_config.py  selenium_config.py
court_cases_scraper/src/courts/db/: db_tools.py
court_cases_scraper/src/courts/scraper/: parser_1.py  parser_2.py  parser_3.py  parser_4.py  parser_5.py  parser_6.py  parser_7.py  parser_8.py  parser_9.py  scrap_cases_to_db.py  scrap_links_to_db.py  scrap_to_db.py  test.py  test1.py
court_cases_scraper/src/courts/scraper/arbitration/: arbitration_scraper.py
court_cases_scraper/src/courts/utils/: utilities.py
court_cases_scraper/src/courts/web/: web_client.py
court_cases_scrapper/: Pipfile  config.py  db_loader.py  scrap_to_db.py  scrapper.py
court_cases_telegram_bot/: .coveragerc  .env_example  Dockerfile  Pipfile  TELE-BOT.md  _build.sh  _build_bot.sh  build.timestamp  docker-compose.yml  setup.cfg  setup.py  telegram_bot.py
court_cases_telegram_bot/.reports/: flake8.report
court_cases_telegram_bot/src/courts/bot/: __init__.py  telegram_bot.py
court_cases_telegram_bot/src/courts/bot/config/: bot_config.py  logger_config.py
court_cases_telegram_bot/src/courts/bot/utils/: utilities.py
court_cases_telegram_bot/src/courts/info/: __init__.py  telegram_bot.py
court_cases_telegram_bot/src/courts/info/config/: config.py
court_cases_web-ui/: .coveragerc  Pipfile  WEB-UI.md  _db_config_example.json  manage.py  requirements.txt
court_cases_web-ui/_csv/: readme.txt
court_cases_web-ui/_sql/: init_db.sql  readme.txt
court_cases_web-ui/courts/: models.py  urls.py  views.py
court_cases_web-ui/courts/templates/courts/: courts_list.html
court_cases_web-ui/courtsinfo/: asgi.py  settings.py  urls.py
court_cases_web-ui/home/: urls.py  views.py
court_cases_web-ui/home/templates/: base_bootstrap.html  base_menu.html
court_cases_web-ui/home/templates/home/: main.html
court_cases_web-ui/home/templates/registration/: login.html
court_cases_web-ui/home/templatetags/: app_tags.py
court_cases_web-ui/logs/: readme.txt
court_cases_web-ui/scripts/: readme.txt
court_cases_web-ui/stats/: models.py  urls.py  views.py
court_cases_web-ui/stats/migrations/: 0001_initial.py
court_cases_web-ui/stats/templates/stats/: stats_list.html
courts-scraper/: Pipfile  setup.cfg
courts-scraper/.courts_scraper/: readme.txt
courts-scraper/src/courts/: exceptions.py
courts-scraper/src/courts/common/: cookiesArbitrary.py
courts-scraper/src/courts/config/: scraper_config.py  selenium_config.py
courts-scraper/src/courts/db/: db_tools.py
courts-scraper/src/courts/scraper/: parser_1.py  parser_2.py  parser_4.py  parser_5.py  parser_6.py  parser_7.py  parser_8.py  parser_9.py  scrap_cases_to_db.py  test.py
courts-scraper/src/courts/utils/: utilities.py
courts-scraper/src/scraper/: defaults.py  scrap_cases_to_db.py  scrap_links_to_db.py  test.py
courts-scraper/src/scraper/common/: cookiesArbitrary.py  misc.py
courts-scraper/src/scraper/config/: db_init_config.py  logger_config.py  scraper_config.py
courts-scraper/src/scraper/db/: db_tools.py
courts-scraper/src/scraper/parsers/: parser_1.py  parser_2.py  parser_3.py  parser_4.py  parser_6.py  parser_8.py  parser_9.py
courts-scraper/src/scraper/scraper/: parser_1.py  parser_4.py  parser_5.py  parser_7.py
courts-scraper/src/scraper/utils/: utilities.py
courts-scraper/src/scraper/web/: web_client.py
courts-tele-bot/: .coveragerc  _build_bot.sh  build.timestamp  example.env
courts-tele-bot/src/courts/bot/: __init__.py  telegram_bot.py
courts-web-ui/: Pipfile  WEB-UI.md  _build-web-ui.sh  _deploy-web-ui.sh  example.env  requirements.txt
courts-web-ui/.db/: _init_sqlitedb.sh  inspected_models.py
courts-web-ui/.resources/: passenger_wsgi.py
courts-web-ui/courts/: models.py  urls.py  views.py
courts-web-ui/courts/migrations/: 0001_initial.py
courts-web-ui/courts/templates/courts/: courts_list.html
courts-web-ui/courtsinfo/: settings.py  urls.py  wsgi.py
courts-web-ui/home/: urls.py  views.py
courts-web-ui/home/templates/: base_bootstrap.html
courts-web-ui/home/templates/home/: main.html
courts-web-ui/stats/: urls.py  views.py
courts-web-ui/stats/migrations/: 0002_dmvcourtcasestatsdetail_delete_dmvcourtstats.py
courts-web-ui/tests/: test.py
sql/config/data/: court_scrap_config.sql
sql/config/procedure/: p_deactivate_outdated_tg_bot_log_entries.sql
sql/config/table/: telegram_bot_notification_log.sql  telegram_bot_subscribtions.sql
sql/config/view/: v_courts_to_refresh.sql  v_links_to_refresh.sql
sql/dm/data/: court_scrap_config.sql
sql/dm/procedure/: mysql5x_p_load_court_cases.sql  p_fill_court_case_stats.sql  p_load_case_links.sql  p_load_court_cases.sql
sql/dm/table/: case_links.sql  court_cases.sql  court_cases_scrap_log.sql  court_scrap_config.sql  date_dimension.sql  telegram_bot_subscribtions.sql
sql/dm/view/: v_court_stats.sql  v_courts_to_refresh.sql
sql/dv/procedure/: p_load_court_cases_ls.sql
sql/init/: create_schema.sql
sql/mysql8/: README.md  my.cnf
sql/mysql8/init/: create_schema.sql
sql/oracle/init/: create_schema.sql
sql/stage/procedure/: p_update_case_num.sql  p_update_court_cases_row_hash.sql
sql/stage/table/: stg_case_links.sql  stg_court_cases.sql
telegram-bot/: TELE-BOT.md  _build_docker_image.sh  _deploy_bot.sh  docker-compose.yml  setup.py
telegram-bot/tests/: test.py
web-ui/: WEB-UI.md  _build-web-ui.sh  _deploy-web-ui.sh  example.env  requirements.txt  setup.cfg
web-ui/.db/: inspected_models.py
web-ui/.db/_csv/: _sample_dm_v_court_stats.csv
web-ui/_csv/: _sample_dm_court_cases.csv
web-ui/courts/: models.py
web-ui/courtsinfo/: settings.py
web-ui/stats/: models.py  urls.py
(+97 files in other folders)
