###############################################################################
#
#   Python and tools configuration file. Main for the module.
#
#   Created:  Dmitrii Gusev, 05.10.2022
#   Modified:
#
###############################################################################

# -- mypy library config
[mypy]
ignore_missing_imports = True

# -- application / library metadata
# todo: adjust metadata for your own project
[metadata]
name = courts.info
version = attr: courts.info.VERSION
description = Courts Info Service :: Telegram Bot
author = Sergei Sokolov, Dmitrii Gusev
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = courts, law, service, info
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

# -- setuptools options
[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:

install_requires =
    pyyaml
    click
    PyMySQL
    python-dotenv
    python-telegram-bot

# -- path for sources searching
[options.packages.find]
where = src

# -- integration with setuptools (see link to click library)
[options.entry_points]
console_scripts =
  courtsbot = courts.info.telegram_bot:main