###############################################################################
#
#   Python/tools configuration file for the module [Courts Telegram Bot].
#
#   Created:  Dmitrii Gusev, 05.10.2022
#   Modified: Dmitrii Gusev, 10.11.2022
#
###############################################################################

# -- mypy library config
[mypy]
ignore_missing_imports = True

# -- application / library metadata
[metadata]
name = courts.bot
version = attr: courts.bot.VERSION
description = Courts Info Service :: Telegram Bot
author = Sergei Sokolov, Dmitrii Gusev
# long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords = courts, law, service, info
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

# -- setuptools options
[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    pyyaml
    click
    PyMySQL
    prettytable
    python-dotenv
    python-telegram-bot

[options.package_data]
* = *.txt, *.rst
hello = *.msg

# -- path for sources searching
[options.packages.find]
where = src

# -- integration with setuptools (see link to click library)
[options.entry_points]
console_scripts =
  courtsbot = courts.bot.telegram_bot:main
